# tokometer

./: .gitignore  DESIGN.md  LICENSE  README.md  daily.sh  flightplan.env.example  harvest.sh  install.sh  monthly.py  observe  pyproject.toml  report_copilot.py  report_html.py  report_morning.py  schema.sql  schema_copilot_vscode.sql  schema_session_logs.sql  tokometer.env.example
collectors/: README.md  claude_code.py  copilot.py  copilot_chat_log.py  copilot_observe.py  copilot_vscode.py  cursor_fetch.py  cursor_reconcile.py  cursor_repos.py  droid.py  gh_metrics.py  git_metrics.py  opencode.py  session_logs.py  vscode_events.py
docs/: WINDOWS.md
lib/: ledger.py  mechanisms.py
push/: client.py  state.py
systemd/: tokometer-push.service  tokometer-push.timer
tests/: conftest.py  test_copilot_chat_log.py  test_copilot_observe.py  test_copilot_vscode_otel.py  test_mechanisms.py  test_push_client.py  test_push_state.py  test_repo_labels.py  test_report_copilot.py  test_session_logs_collector.py  test_vscode_events.py
