[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokometer"
version = "0.2.0"
description = "Local-first AI coding spend tracker + flightplan push client."
requires-python = ">=3.10"
license = { text = "MIT" }
# Production stays stdlib-only per DESIGN.md.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",  # urllib HTTP mocking via responses-style approach -- we use a thin shim
]

[tool.setuptools]
packages = ["collectors", "lib", "push", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
